--- a/src/components/forms/form.css
+++ b/src/components/forms/form.css
@@ -3,6 +3,7 @@
   padding: 20px;
   background-color: #ffffff;
   border-radius: 8px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 .form fieldset {
@@ -47,6 +48,8 @@ section {
   background-color: #ffffff;
   margin-top: 20px; 
   border-radius: 8px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+
 }
 
 section h2 {
